--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -275,4 +275,14 @@ width:400px;
 height: 200px;
 border-radius: 30px;
 }
+button-style
+{
+height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(right, #ca9116, #eeca00, #e2b319, #ffffff);
+  border-radius: 5px;
+  transition: all 0.4s ease;; 
+}
 
