--- a/html/css/contactPage.css
+++ b/html/css/contactPage.css
@@ -18,6 +18,10 @@ body {
   align-items: center;
 }
 
+button:active {
+  transform: scale(.9);
+}
+
 #contact-container {
   position: absolute;
   display: flex;
@@ -36,6 +40,8 @@ body {
   margin: 0 0 10px 0;
   color: #25948E;
 }
+
+/* Search Bar */
 
 #search-container {
   position: relative;
@@ -63,6 +69,8 @@ body {
   text-align: center;
 }
 
+/* Contact Table */
+
 #table-container {
   flex-grow: 1;
   min-height: 0;
@@ -81,6 +89,10 @@ body {
 #contact-table th {
   padding: 5px 0;
   background-color: #26D4D4;
+}
+
+#action-button-column {
+  width: 200px;
 }
 
 #contact-table tr:nth-child(even){
@@ -110,7 +122,9 @@ body {
   background-color: #da5e70;
 }
 
-#new-contact-bttn {
+/* New Contact Button */
+
+#new-contact-button {
   align-self: flex-end;
   height: 50px;
   width: 250px;
@@ -120,4 +134,74 @@ body {
   color: #fff;
   background-color: #ECBC27;
   box-shadow: -5px 5px 40px -15px #000;
+}
+
+/* Add Contact Modal */
+
+#modal-container {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  transition: opacity 1s;
+}
+
+.close-button {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 50px;
+  height: 50px;
+  border: none;
+  background: none;
+}
+
+.close-button img {
+  width: 100%;
+}
+
+#add-contact-modal {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  width: 500px;
+  height: 500px;
+  background-color: #e0be56;
+  border-radius: 50px;
+  padding: 25px;
+}
+
+#add-contact-modal h2 {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+#add-contact-modal input {
+  height: 40px;
+  width: 90%;
+  border-radius: 25px;
+  border: none;
+  text-align: center;
+  font-size: 1.2rem;
+  margin: auto;
+  outline: none;
+}
+
+#add-contact-button {
+  width: auto !important;
+  height: 50px !important;
+  border-radius: 15px;
+  border: none;
+  padding: 0 20px !important;
+  margin-top: auto;
+  background-color: #3354e2;
+  font-size: 1.2rem;
+  color: #fff;
 }
